# kalypsi

./: .pre-commit-config.yaml  Cargo.toml  index.html  pyproject.toml  rustfmt.toml  style.scss
src/: generate.rs  lib.rs  main.rs
