[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = "0.2.4"
log = "0.4.17"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["Storage"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package]
edition = "2021"
name = "kalypsi"
version = "0.1.0"
