[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = {version = "0.2.9", features = ["js"]}
leptos = "0.2.5"
leptos_meta = "0.2.5"
log = "0.4.17"
nanorand = {version = "0.7.0", default-features = false, features = ["wyrand"]}
oneshot = {version = "0.1.5", features = ["async"]}
rand = "0.8.5"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
uuid = {version = "1.3.1", features = ["fast-rng", "v4", "js"]}
vec1 = "1.10.1"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["Storage"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package]
edition = "2021"
name = "kalypsi"
version = "0.1.0"
